<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eatlo</string>
    <string name="places">places</string>
    <string name="place_order">Place order</string>
    <string name="dishes">dishes</string>
<string name="name">name</string>
<string name="hello">" "</string>
    <string name="contact">ContactNumber</string>
    <string name="mail">email id</string>
    <string name="minus">-</string>
    <string name="desc">desc</string>
    <string name="space">" "</string>
        <string name="Rs.45">Rs.45</string>
            <string name="Rs.98">Rs.98</string>
                <string name="Rs.180">Rs.180</string>
    <string name="plus">+</string>
    <string name="address">Delivery Address</string>
    <string name="actions_settings">settings</string>
    <string-array name="dropmenu">
        <item >Palce order</item>
        <item >order history</item>
        <item >close</item>
        
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>